[project]
name = "kvcache-learning"
version = "0.1.0"
description = "Systematic learning of LLM KV Cache through theory and code"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "torch>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
